Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • xserver xserver
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 922
    • Issues 922
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 129
    • Merge requests 129
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • xorgxorg
  • xserverxserver
  • Issues
  • #1051
Closed
Open
Issue created Aug 02, 2020 by Mikael Knutsson@mikn

Xwayland should not trigger screensavers per default

I use xss-lock on my Wayland setup to trigger a lock screen and realised a few things:

  1. If no activity is detected within Xwayland, it will trigger the screensaver without any settings adjustments
  2. Xwayland has no configuration file that it reads from, meaning if you want to turn off the default screensaver setting, you need to pass a command line parameter or after Xwayland has started, run xset s off
  3. Not many WMs that use Xwayland actually allow you to change the command line paramters for Xwayland (sway and wlroots is my example)

Given how Xwayland is run (inside another WM) I would propose to change the default setting for triggering the screensaver event in Xwayland specifically (which I assume is inherited from Xserver) as if you're running Xwayland you probably have other tools to manage the idle time detection and you're most likely not in an Xwayland client all the time meaning that the triggering of the screensaver is unexpected behaviour?

Personally I do not use idle detection at all and rely on manually locking the screen which may be why I'm hitting this issue.

I'm also fine with if there's an upcoming change to introduce a configuration file for Xwayland however, as I realise that this is perhaps not "standard" or "intended" use.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking